# argo

./: .rand_100.txt.swp  README.md  draw_graph.py  example.py  lottery_analysis.py  main.py  pyproject.toml  rand_100.txt  red_mix_blue_dist_100.txt  test.bash
ai-assist_innov/: README.md
crawler/: history_query.py  lottery_crawler.py
crawler/lottery/: lottery_data.csv
exp/: chatbot.py  pdf_chatbot.py
