[project]
name = "argo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "matplotlib>=3.10.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "selenium>=4.32.0",
]
